compilador/test_programs/invalid/04_type_mismatch.patito
programa type_mismatch;
vars:
    x: entero;
    y: flotante;

inicio {
    y = 3.14;
    x = y;
}
fin
